--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "code-mongo",
   "version": "1.0.0",
-  "description": "Mongoose adventures",
+  "description": "Mongoose Adventures",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
